# loreweaver

./: .gitignore  MISSION.md  README.md  classification.yaml  compose.yaml  local-setup.md  lore.yaml  main.py  pyproject.toml
.lore/objectives/: define-project-layout.md  editor-agent-integration.md  git-hook-integration.md  github-ci-mode.md  objective.md  project-daemon-service.md  project-local-cli.md
.pi/skills/clasify-documents/: SKILL.md
cocoindex.db/mdb/: data.mdb  lock.mdb
docs/imaginary-terraform-project/: migration-plan.md  resources.md  runbook.md
examples/: fake_pipeline.py
knowledge/: chunking-strategies.md  code-source-and-transform.md  knowledge-into-meaning.md  terraform-transform.md
markdown_files/imaginary-terraform-project/: README.md  architecture.md  terraform-layout.md
src/loreweaver/: cli.py  config.py  init.py  main.py  update.py
src/loreweaver/core/: interfaces.py  models.py  pipeline.py
src/loreweaver/index/: context.py  schema.py
src/loreweaver/models/: chunks.py
src/loreweaver/query/: search.py
src/loreweaver/sources/: __init__.py  local_files.py
src/loreweaver/transforms/: markdown.py
